--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
     <script src="./js/index.js" defer></script>
   </head>
   <body>
@@ -53,6 +55,7 @@
           <button id="restart-btn">Restart Quiz</button>
         </div>
       </div>
+      <p class="footer">© Michael Ubek 2024</p>
     </div>
   </body>
 </html>
